Initial 1.16.5 Backport